--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,8 +25,11 @@ jobs:
         with:
           dfx-version: 'auto'
 
-      - name: Build
-        run: bun run build
+      - name: Create & Build
+        run: |
+          dfx start --background
+          dfx deploy
+          dfx stop
       
       - name: Test
         run: bun run test
