--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "scripts": {    
+  "scripts": {
     "test": "tsc && bun test"
   },
   "dependencies": {
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@dfinity/pic": "^0.17.1",
     "@types/bun": "^1.3.5",
+    "prettier-plugin-motoko": "^0.12.5",
     "typescript": "^5.9.3"
   },
   "trustedDependencies": ["@dfinity/pic"]
