--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: test
 on:
   push:
     branches:
-      - main      
+      - main
   pull_request:
 
 jobs:
@@ -23,10 +23,10 @@ jobs:
       - name: Setup DFX
         uses: dfinity/setup-dfx@main
         with:
-          dfx-version: 'auto'
+          dfx-version: "auto"
 
       - name: Setup Mops
-        uses: dfinity/setup-mops@v1        
+        uses: dfinity/setup-mops@v1
 
       - name: Install Mops Packages
         run: mops install
@@ -36,6 +36,6 @@ jobs:
           dfx start --background
           dfx deploy
           dfx stop
-      
+
       - name: Test
         run: bun run test
