added format to workflow

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "scripts": {
+    "format:check": "prettier --check .",
+    "format": "prettier --write .",
     "test": "tsc && bun test"
   },
   "dependencies": {
