--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,5 +37,8 @@ jobs:
           dfx deploy
           dfx stop
 
+      - name: Check Format
+        run: bun run format:check
+
       - name: Test
         run: bun run test
