--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,5 +40,10 @@ jobs:
       - name: Check Format
         run: bun run format:check
 
+      - name: Lint Motoko
+        run: |
+          curl -sL https://github.com/caffeinelabs/lintoko/releases/download/v0.7.0/lintoko-x86_64-unknown-linux-gnu.tar.xz | tar xJ
+          ./lintoko -r .lintoko src
+
       - name: Test
         run: bun run test
