--- a/.lintoko/no-let-else.toml
+++ b/.lintoko/no-let-else.toml
@@ -1,5 +1,5 @@
 name = "no-let-else"
-description = "Do not use let-else patterns. Use switch statements instead for better readability."
+description = "Do not use let-else. Use a switch instead."
 query = """
 (let_else_dec) @error
 """
