--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Lint Motoko
         run: |
-          curl -sL https://github.com/caffeinelabs/lintoko/releases/download/v0.7.0/lintoko-x86_64-unknown-linux-gnu.tar.xz | tar xJ
+          curl --proto '=https' --tlsv1.2 -LsSf https://github.com/caffeinelabs/lintoko/releases/download/v0.7.0/lintoko-installer.sh | sh
           ./lintoko -r .lintoko src
 
       - name: Test
