fix lintoko setup

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "format:check": "prettier --check .",
     "format": "prettier --write .",
-    "lint": "./lintoko -r .lintoko src",
+    "lint": "lintoko -r .lintoko src",
     "test": "tsc && dfx build && bun test"
   },
   "dependencies": {
