--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Lint Motoko
         run: |
           curl --proto '=https' --tlsv1.2 -LsSf https://github.com/caffeinelabs/lintoko/releases/download/v0.7.0/lintoko-installer.sh | sh
-          ./lintoko -r .lintoko src
+          bun run lint
 
       - name: Test
         run: bun run test
