--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
+  "type": "module",
   "scripts": {
     "format:check": "prettier --check .",
     "format": "prettier --write .",
-    "lint": "lintoko -r .lintoko src",
+    "lint": "eslint . && lintoko -r .lintoko src",
     "test": "tsc && dfx build && bun test"
   },
   "dependencies": {
@@ -12,9 +13,13 @@
   "devDependencies": {
     "@dfinity/pic": "^0.17.1",
     "@types/bun": "^1.3.5",
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
+    "eslint": "^9.39.2",
     "husky": "^9.1.7",
     "prettier-plugin-motoko": "^0.12.5",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.52.0"
   },
   "trustedDependencies": [
     "@dfinity/pic"
