added unit tests (mops) and improved lintoko rules

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "scripts": {
     "format:check": "prettier --check .",
     "format": "prettier --write .",
-    "lint": "eslint . && lintoko -r .lintoko src",
-    "test": "tsc && dfx build && bun test"
+    "lint": "eslint . && lintoko -r .lintoko src tests",
+    "test": "tsc && dfx build && bun test && mops test"
   },
   "dependencies": {
     "@dfinity/agent": "^3.4.3",
