--- a/.lintoko/case-parameters.toml
+++ b/.lintoko/case-parameters.toml
@@ -1,8 +1,8 @@
 name = "case-parameters"
 description = "Function parameters should use camelCase."
 query = """
-(var_pat 
-  (identifier) @ident @error
-  (#match? @ident "_")
-  (#parent-is? @ident "func_dec"))
+(func_dec
+  (var_pat 
+    (identifier) @ident @error
+    (#match? @ident "^[^_].*_")))
 """
